[gd_scene load_steps=3 format=3 uid="uid://t8ed2ebkwkko"]

[ext_resource type="Script" path="res://game_logic/bubble_sort.gd" id="1_owsqd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obqxj"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.909804, 0.909804, 0.909804, 1)

[node name="BubbleSort" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owsqd")
default_color = Color(0.95, 0.95, 0.95, 1)

[node name="StartSort" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -137.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_obqxj")
text = "Start sort"

[node name="GoBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_obqxj")
text = "Go back"

[connection signal="pressed" from="StartSort" to="." method="on_StartSort_pressed"]
[connection signal="pressed" from="GoBack" to="." method="on_GoBack_pressed"]
